--- a/css/base.css
+++ b/css/base.css
@@ -36,7 +36,6 @@ img{
 	text-indent:-9999px;
 	width:314px;
 	height:93px;
-	background:url(../images/login_register_bg.png) center center no-repeat;
 }
 .log_re form,.register form{
 	padding-left:433px;
@@ -240,6 +239,7 @@ color:#029bc1;
     width:100%;
     position:absolute;
 	top:20px;
+	border:1px solid #999;
 
 }
 .banner_menu li a:hover{
@@ -312,7 +312,13 @@ color:#029bc1;
 	font-size:14px;
 }
 .brief_intr{
+	display:inline-block;
+	width: 230px;
 	color:#7F7F7F;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-all;
 }
 .display_scenes img{
 	width:250px;
@@ -451,6 +457,7 @@ p.c_bn{
 	position:relative;
 	padding-top:19px ;
 	padding-bottom:19px;
+	padding-bottom:19px;
 	color: #6f6f6f;
 }
 .qq ,.weibo , .weixin,.collect_icon{
@@ -522,20 +529,20 @@ p.c_bn{
 }
 .orderSearch{
 	position:relative;
-	height:212px;
 	padding:10px;
+    padding-top:0;
 	color:#333;
 	border-bottom: 1px solid #dedede;
 }
 .rows{
-	margin-top:10px;
-	height:60px;
+	margin-top:20px;
 }
 .palyerMsg{
-	float:left;
+   display:inline-block;
 }
 .palyerMsg label{
 	font-size:14px;
+
 }
 .on-selected{
 	width:87px !important;
@@ -545,27 +552,67 @@ p.c_bn{
 }
 .palyerMsg label{
 	display:inline-block;
-	margin-top:8px;
-	min-width:96px;
+	min-width:40px;
 }
 .inputMsg{
-	width:121px;
+	width:116px;
 	height:30px;
+	border:1px solid #999;
 	padding-left:10px;
 }
 .orderTypeMsg{
 	position:relative;
-	left:8px;
-	float:right;
+	display:inline-block;
+
+}
+.calcleMenu{
+	position:fixed;
+	top:200px;
+	left:450px;
+	width:450px;
+	height:250px;
+	background:#F5F5F5;
+	border:1px solid #ccc;
+	display:none;
+}
+.calcleMenu2{
+	position:fixed;
+	top:200px;
+	left:450px;
+	width:400px;
+	height:160px;
+	background:#F5F5F5;
+	border:1px solid #ccc;
+	display:none;
+}
+.orderSure3{
+	left:160px;
+}
+.orderCancle3{
+	left:194px;
+}
+.i-triangle2{
+	position:relative;
+	top:11.2px;
+	left:-5px;
+	width: 32px;
+	height:30px;
+	background: #FFF;
+	display:inline-block;
+	border:1px solid #029BC1;
+	border-left:none;
+	cursor: pointer;
 }
 .i-triangle{
+	position:relative;
+	top:11.2px;
+	left:-5px;
 	width: 32px;
-	height:32px;
+	height:30px;
 	background: #FFF;
-	display:block;
-	border:1px solid gray;
+	display:inline-block;
+	border:1px solid #999;
 	border-left:none;
-	float: right;
 	cursor: pointer;
 }
 .triangle{
@@ -574,23 +621,37 @@ p.c_bn{
 	display:block;
 	margin-top:14px;
 	margin-left:10px;
-	border-left: 6px solid #FFF;
-	border-right: 6px solid #FFF;
+	border-left: 6px solid #fff;
+	border-right: 6px solid #fff;
+	border-top: 6px solid #999;
+	border-bottom: none;
+}
+.triangle2{
+	width:0;
+	height:0;
+	display:block;
+	margin-top:14px;
+	margin-left:10px;
+	border-left: 6px solid #029BC1;
+	border-right: 6px solid #029BC1;
 	border-top: 6px solid #999;
 	border-bottom: none;
 }
 .orderType{
 	position:absolute;
 	left:0;
-	top:15.6px;
-	padding-top:10px;
-	width:91.6px;
-	background-color:#FFFFFF;
+	top:42.6px;
+	padding:10px 0 5px 10px;
+	width:119px;
+	background-color:#fff;
+	border:1px solid gray;
+	border-top:none;
 	display:none;
+	z-index:1;
 }
 .orderType li{
 	list-style-type:none;
-	line-height:20px;
+	line-height:25px;
 }
 .search{
 	color:white;
@@ -610,11 +671,12 @@ p.c_bn{
 .idButton {
 	margin-left:5px;
 }
-.titleName{
+.titleName,.titleName2{
 	width:100%;
 	float:left;
 }
-.titleName li{
+
+.titleName li,.titleName2 li{
 	height:40px;
 	float:left;
 	display:block;
@@ -623,19 +685,20 @@ p.c_bn{
 	background-color:#F5F5F5;
 }
 .name1{
-	width:11%;
+	width: 29%;
+	padding-left: 8px;
 }
 .name2 {
-	width: 8%;
+	width: 15%;
 }
 .name3 {
-	width: 30%;
+	width: 15%;
 }
 .name4 {
-	width: 6%;
+	width: 15%;
 }
 .name5{
-	width:12%;
+	width:10.3%;
 	text-align:center !important;
 }
 .order{
@@ -647,13 +710,15 @@ p.c_bn{
 	width:100%;
 	margin-left:8px;
 	float:left;
-	border-bottom: 1px solid #dedede;
 }
 .items li{
 	float:left;
 	display:block;
-	padding:20px 0px 30px 0px;
-
+	padding:10px 0px 20px 0px;
+}
+li.mulChoose{
+	margin-top:10px;
+	padding-top:0;
 }
 .name1 em{
 	font-style:normal;
@@ -669,8 +734,10 @@ p.c_bn{
 	color:#66666A;
 }
 .name5 a{
+	position:relative;
 	display:block;
 	color:#029BC1;
+	left:-8px;
 }
 
 /*footer_part*/
@@ -744,11 +811,12 @@ padding-top:28px;
 	height:30px;
 	vertical-align:middle;
 	background-color:#F2F2F2;
+
 }
 .sceneTitle{
 	height:100px;
 	width:1180px;
-	padding:10px;
+	padding:30px 10px 10px 10px;
 }
 .sceneTitle img{
 	float:left;
@@ -789,10 +857,13 @@ padding-top:28px;
 	float:left;
 }
 .type{
-	width:35%;
+	width:19%;
 }
 .explation{
-	width:25%;
+	width:54%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .cost1{
 	width:10%;
@@ -808,11 +879,116 @@ padding-top:28px;
 	display:block;
 }
 .sceneDMsg{
+	position:relative;
 	color: #666;
 	width:1180px;
 	padding:20px 0 30px 10px;
 	border-bottom: 1px solid #dedede;
+	line-height:30px;
+}
 
+.shopMsg{
+	position:fixed;
+	top:180px;
+	left:400px;
+	width:560px;
+	height:390px;
+	padding: 20px 0 20px 20px;
+	background:#F2F2F2;
+	z-index:1;
+	border:1px solid #ccc;
+	display:none;
+}
+.multiple{
+	width:230px;
+}
+.ID{
+	width:200px;
+}
+.clear{
+	clear:both;
+}
+.ticketMsg{
+    padding-left:130px;
+	margin-right:32px;
+	margin-bottom:10px;
+	padding-top:15px;
+}
+.ticketMsg2{
+	margin:30px 50px;
+}
+.ticketMsg span,.ticketMsg2 span{
+	display:inline-block;
+	width:80px;
+	text-align:justify;
+	color:#FF6600;
+}
+.basicMsg{
+	width:200px;
+	height:30px;
+	padding-left:10px;
+}
+.scenePart{
+	position:relative;
+	float:left;
+}
+
+.chooseMsg input{
+	margin-right:10px;
+}
+.chooseMsg label{
+	margin-left:3px;
+}
+.orderSure,.orderCancle{
+	position:relative;
+	text-align:center;
+	width: 60px;
+	height: 30px;
+	border-radius: 5px;
+	background-color: #029BC1;
+	border: none;
+	margin-right:24px;
+	cursor:pointer;
+}
+
+.orderSure2,.orderCancle2,.orderAdd2,.orderSure3,.orderCancle3{
+	position:relative;
+	text-align:center;
+	width: 60px;
+	height: 30px;
+	border-radius: 5px;
+	background-color: #029BC1;
+	border: none;
+	margin-right:24px;
+}
+.orderSure2{
+	left:132px;
+}
+.orderCancle2{
+	left:105px;
+}
+.orderAdd2{
+	left:119px;
+}
+.sub{
+	margin-right:10px;
+}
+.add{
+	margin-left:10px;
+}
+.orderSure{
+	top:20px;
+	left:215px;
+}
+.orderCancle{
+	top:20px;
+	left:263px;
+}
+.changeMun{
+	position:relative;
+}
+.scene2{
+	position:relative;
 }
 .scene2 ul,.scene2 li{
 	float:left;
@@ -822,18 +998,18 @@ padding-top:28px;
 	height:30px;
 	border-radius:5px;
 	background-color:#029BC1;
+	cursor:pointer;
 	border:none;
 }
 .type a{
 	color:#029BC1;
 }
 .numbers{
-	width: 30px;
-	height: 12px;
+	width: 39px;
+	height: 30px;
 	line-height: 15px;
 	color: #343434;
 	text-align: center;
-	padding: 4px 0;
 	background-color: #fff;
 }
 .cost2,.buy{
@@ -850,7 +1026,6 @@ padding-top:28px;
 	border-bottom:none;
 }
 .sceneitems{
-	padding:15px 0;
 	float:left;
 	border: 1px solid #ccc;
 
@@ -1126,4 +1301,142 @@ p.c_bn{
 }
 
 
+.b1{
+	border-right:none;
+}
+.timeNav{
+	position: relative;
+	top: 2px;
+    display:inline-block;
+	z-index:0;
+}
+.timeNodeBox{
+	display:inline-block;
+}
+.orderPreview{
+	position:relative;
+	height:35px;
+}
+.iconfont{
+	position: relative;
+	font-family: iconfont;
+	font-size: 1pc;
+	font-size: 1rem;
+	font-style: normal;
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-stroke-width: 0;
+}
+.gRadio{
+	margin-left:5px;
+}
+.menuTime{
+	float:right;
+}
+.line{
+	width:100%;
+	height:8px;
+	background:#F5F5F5;
+}
+.line2{
+	width:88.8%;
+	height:8px;
+	background:#F5F5F5;
+}
+.menuID,.menuName{
+	margin-left:7px;
+}
+.menuHead1{
+	padding-bottom:5px;
+	border-bottom:2px dotted #f5f5f5;
+}
+.lowestPrice{
+	float:right;
+	color: #f60;
+	padding-right:20px;
+}
+.myPrice{
+	font-size: 24px;
+	font-weight: bold;
+}
+.myPriceqi{
+	color:#666;
+}
+.distributorType{
+	margin-bottom:10px;
+	padding-left:15px;
+}
+.b2{
+	background:#029BC1;
+	border:1px solid #029BC1;
+}
 
+.produceSelect{
+	background:#029BC1;
+}
+.channel{
+	display:inline-block;
+	padding:3px;
+}
+.b3{
+	background:#029BC1;
+}
+.gnumber,.gmoney{
+	position:relative;
+	display:inline-block;
+	width:60px;
+	height:40px;
+	text-align:center;
+	line-height:40px;
+}
+.gmoney{
+	position:relative;
+	left:-5px;
+}
+.gnumber{
+	background: #fff;
+	border-top: 3px solid #029BC1;
+	font-weight: bold;
+	border-right: 1px solid #f4f4f4;
+}
+.gTitle{
+	position:relative;
+	background:#F5F5F5;
+	border-top: 3px solid #F5F5F5;
+	border-bottom: 3px solid #F5F5F5;
+	margin-bottom:1px;
+}
+.ordersGroup{
+	display:none;
+}
+.menuDsp{
+	margin-bottom:1px;
+	border-bottom:3px solid #F5F5F5;
+}
+.noText{
+	text-align:center;
+	font-size:20px;
+	padding-top:20px;
+}
+.pointer{
+	cursor:pointer;
+}
+#container{
+	position:fixed;
+	margin:40px auto;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+	background: #F5F5F5;
+	border: 1px solid #ccc;
+	display:none;
+}
+.ranking{
+	display:inline-block;
+	width:100px;
+	height:30px;
+	background:#029BC1;
+	border:none;
+	text-align:center;
+	margin-left:20px;
+}
